# TianqueROS

./: README.md
Experiments/control/drone/: mavros_position_control.cpp
Experiments/drone_dev/: CMakeLists.txt  README.md  package.xml
Experiments/drone_dev/config/: alt_vxy_params.yaml
Experiments/drone_dev/launch/: offb_takeoff.launch
Experiments/drone_dev/src/: offboard_takeoff.cpp
Experiments/drone_dev/worlds/: experiment.world
Modules/SLAM/: README.md
Simulation/: README.md
Solution/: README.MD
Solution/mecha/: README.md
Solution/uav_navigation/: README.md
Solution/uav_navigation/mav_comm/mav_system_msgs/: CMakeLists.txt  package.xml
Solution/uav_navigation/mav_comm/mav_system_msgs/msg/: CpuInfo.msg  ProcessInfo.msg
Tools/: findInfo.sh
Tools/compile/: catkin_build.sh  code_to_catkin_ws.sh  compile_uav_navigation.sh
Tools/rosbag_handle/: getPictureFromBag.py
experiment_fast_planner/: package.xml  run_vins_planner.sh  run_vins_planner_record.sh
experiment_fast_planner/config/: px4_sitl_stereo_imu_config.yaml
experiment_fast_planner/launch/: experiment_fast_planner.launch  mavros.launch  px4.launch  px4_topo_replan.launch  rs_d435i.launch  rviz.launch  show_experiment_rosbag.launch  vins_fusion.launch
experiment_fast_planner/scripts/: vins_transfer.py
experiment_fast_planner/src/: target_publisher.cpp
px4_fast_planner/: pub_targatPoint.sh  pub_targetPoints.sh
px4_fast_planner/launch/: feed_mocap_pose.launch  offb_takeoff_test.launch  px4_fast_planner.launch
px4_fast_planner/scripts/: PID.py
(+198 files in other folders)
